<?xml version="1.0"?>
<package format="3">
  <name>mecanum_modbus</name>
  <version>0.1.0</version>
  <description>ROS 2 node to control 4 RMCS-3001 BLDC motor drivers over RS485 based on /cmd_vel input</description>

  <maintainer email="shindechetan.ttd@gmail.com">Chetan Shinde</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pymodbus</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>